--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "private": true,
   "packageManager": "npm@11.2.0",
   "dependencies": {
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "@angular/animations": "^21.0.5",
     "@angular/cdk": "^21.0.3",
     "@angular/common": "^21.0.0",
