--- a/package.json
+++ b/package.json
@@ -23,8 +23,6 @@
   "private": true,
   "packageManager": "npm@11.2.0",
   "dependencies": {
-    "@ngx-translate/core": "^14.0.0",
-    "@ngx-translate/http-loader": "^7.0.0",
     "@angular/animations": "^21.0.5",
     "@angular/cdk": "^21.0.3",
     "@angular/common": "^21.0.0",
@@ -35,6 +33,8 @@
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
     "@angular/service-worker": "^21.0.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
@@ -42,7 +42,13 @@
     "@angular/build": "^21.0.3",
     "@angular/cli": "^21.0.3",
     "@angular/compiler-cli": "^21.0.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^13.1.3",
+    "@semantic-release/release-notes-generator": "^14.1.0",
     "sass": "^1.96.0",
+    "semantic-release": "^25.0.2",
     "typescript": "~5.9.2"
   }
 }
